--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
 
-    <title>응원 한마디!</title>
+    <title>무엇이든 물어코딩</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@200;300;400;500;600;700;900&display=swap"
         rel="stylesheet" />
@@ -126,7 +126,7 @@
 
 <body>
     <div class="mypic">
-        <h1>응원 페이지</h1>
+        <h1>무엇이든 물어보세요</h1>
     </div>
     <div class="mypost">
         <div class="form-floating mb-3">
@@ -136,9 +136,9 @@
         <div class="form-floating">
             <textarea class="form-control" placeholder="Leave a comment here" id="comment"
                 style="height: 100px"></textarea>
-            <label for="floatingTextarea2">응원 한마디!</label>
+            <label for="floatingTextarea2">질문을 남겨주세요</label>
         </div>
-        <button onclick="save_comment()" type="button" class="btn btn-outline-secondary">응원 남기기</button>
+        <button onclick="save_comment()" type="button" class="btn btn-outline-secondary">질문 남기기</button>
     </div>
     <div class="mycards" id="comment-list">
         <div class="card">
