--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,179 +1,51 @@
+@font-face {
+  font-family: "SUITE-Regular";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2304-2@1.0/SUITE-Regular.woff2")
+    format("woff2");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "TTWanjudaedunsancheB";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2304-2@1.0/TTWanjudaedunsancheB.woff2")
+    format("woff2");
+  font-weight: 700;
+  font-style: normal;
+}
+
 :root {
   --main-color: #00b890;
   --point-color: #f75820;
+  --bg-color: #f2f6f8;
 }
 
 * {
-  font-family: "Gowun Dodum", sans-serif;
+  font-family: "SUITE-Regular", sans-serif;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
-body {
-  background-color: #f2f6f8;
-}
-
-header {
-  width: 100%;
-  height: 250px;
-
-  background-image: linear-gradient(
-      0deg,
-      rgba(0, 0, 0, 0.5),
-      rgba(0, 0, 0, 0.5)
-    ),
-    url("https://www.notion.so/image/https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fsecure.notion-static.com%2Fb45749f4-068c-431f-acc0-578d340100f0%2FUntitled.png?table=block&id=0b5ff99c-fc1f-4b89-8403-88085fb87fa5&spaceId=22cf7bfc-144a-4d3c-bfe9-638176135a87&width=2000&userId=bbcef923-dc35-415b-81e9-8fbc19e70794&cache=v2");
-  background-position: center;
-  background-size: cover;
-
-  color: white;
-  font-size: 2rem;
-
-  display: flex;
-  align-items: center;
-  padding-left: 15rem;
-}
-main {
-  margin: auto 10%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-.time {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  padding: 5rem 2rem;
-}
-.time h1 {
-  flex: 2;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 6rem;
-  padding-bottom: 2rem;
-}
-.timeBtns {
-  display: flex;
-  justify-content: space-between;
-}
+/* 버튼 css */
 .mainBtn {
   margin: 0 0.5rem;
   border: 3px solid var(--main-color);
   color: var(--main-color);
   border-radius: 45px;
-  transition: all 0.3s;
   cursor: pointer;
   background: white;
-}
-.timeBtns button {
-  width: 100px;
-  height: 60px;
-  font-size: 1.2em;
-  font-weight: 550;
-}
-.timeBtns button:hover {
-  background: var(--main-color);
-  color: white;
-  font-size: 1.5em;
-}
-.members {
-  width: 80vw;
-  display: grid;
-  padding: 1rem;
-  margin-bottom: 5rem;
-  gap: 2rem;
-  grid-template-columns: repeat(4, 1fr);
-}
-.mem {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  border-radius: 20px;
-  padding: 3rem;
-  background: white;
-  transition: all 0.3s;
-  cursor: pointer;
-}
-.mem:hover {
-  background: var(--main-color);
-  color: white;
-}
-.mem_name {
-  font-size: 1.5rem;
-  margin-bottom: 1rem;
-}
-.mem p {
-  margin-bottom: 0.5rem;
+  transition: all 0.2s;
 }
 
-/* 모달창 */
-#modal {
-  position: fixed;
-  z-index: -1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0, 0, 0, 0.4);
-  opacity: 0;
-  transition: all 0.3s;
-}
-
-.modal-content {
-  position: relative;
-  width: 30rem;
-  background-color: white;
-  margin: 10% auto;
-  padding: 5rem 0 4rem 0;
-  border-radius: 2rem;
-  display: flex;
-  justify-content: space-evenly;
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-}
-
-#close-modal {
+.title {
   position: absolute;
-  z-index: 2;
-  top: 1.5rem;
-  right: 1.5rem;
-  transition: all 0.3s;
-}
-
-#close-modal i {
-  font-size: 1.5rem;
-}
-
-#close-modal:hover {
-  color: var(--main-color);
-}
-
-.mem_img {
-  width: 8rem;
-  height: 10rem;
-  border-radius: 5rem;
-  overflow: hidden;
-}
-
-.mem_img img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.mem_info {
-  display: grid;
-  grid-template-rows: repeat(4, 1fr);
-  place-items: center;
-  /* justify-items: center; */
-}
-
-.mem_info-hobbys {
-  display: flex;
+  width: 500px;
+  height: 300px;
+  text-align: center;
+  top: -80px;
+  background: var(--bg-color);
+  font-size: 2rem;
+  padding: 2rem;
+  border-radius: 50%;
 }
